Added tabs component examples

--- a/_includes/blocks/item-comments.html
+++ b/_includes/blocks/item-comments.html
@@ -1,5 +1,3 @@
-
-
 <div class="comment-addNew">
   <input class="comment-addNew__input" placeholder="use @username to notify">
   <div class="comment-addNew__actions">
@@ -8,168 +6,10 @@
   </div>
 </div>
 
-<div class="tabs">
-  {% include components/tabs-nav.html data=";;" %}
 
-  <div class="tabs-panels">
-    <div class="tabs-panels__panel" tabindex="1">
+{% assign tabsNavData = ";;" %}
+{% capture panelData %}
+  {% include blocks/item-comments-tab1.html %}
+{% endcapture %}
 
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@Nick De Jaeger</span> Officia deserunt mollit anim id est, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Nick De Jaeger</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@Nick De Jaeger</span> Officia deserunt mollit anim id est, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Nick De Jaeger</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@Nick De Jaeger</span> Officia deserunt mollit anim id est, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Nick De Jaeger</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-        <div class="comment-posted comment-posted--self">
-          <header class="comment-posted__header">
-            <div class="comment-posted__author">Jetro Wils</div>
-          </header>
-          <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@Nick De Jaeger</span> Officia deserunt mollit anim id est, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-            <div class="comment-posted__attachment">
-              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
-            </div>
-          </article>
-          <footer class="comment-posted__footer">
-            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
-          </footer>
-        </div>
-
-    </div>
-  </div>
-
-</div><!-- /.tabs -->
+{% include components/tabs.html tabsNavData=tabsNavData panelData=panelData %}
