cleaner folder structure in blocks

--- a/_includes/blocks/app-nav/app-nav.html
+++ b/_includes/blocks/app-nav/app-nav.html
@@ -1,9 +1,9 @@
 <div class="h-full overflow-y-auto scrollbar-none">
   {% assign tabsNavData = "Structure;Overviews;Recently used;Favorites" %}
   {% capture panelData %}
-    {% include blocks/app-nav-tab1.html %}
+    {% include blocks/app-nav/app-nav-tab1.html %}
     ;&&;
-    {% include blocks/app-nav-tab2.html %}
+    {% include blocks/app-nav/app-nav-tab2.html %}
     ;&&;
     ;&&;
   {% endcapture %}
