--- a/_includes/main.html
+++ b/_includes/main.html
@@ -3,7 +3,7 @@
       <div class="overlay-body"></div>
 
       <div class="app-navigator">
-        {% include blocks/app-nav.html %}
+        {% include blocks/app-nav/app-nav.html %}
       </div>
 
       <div class="user-menu">
@@ -12,7 +12,7 @@
 
       <main class="container-master">
         <header class="app-header cf">
-          {% include blocks/app-header.html %}
+          {% include blocks/app-header/app-header.html %}
         </header>
 
           <div class="app__document app__document--story">
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="panel__right">
-                  {% include blocks/item-comments.html %}
+                  {% include blocks/item-comments/item-comments.html %}
                 </div>
 
               </div><!-- /.document__content -->
