--- a/_includes/blocks/item-main/item-main.html
+++ b/_includes/blocks/item-main/item-main.html
@@ -13,11 +13,11 @@
 
 {% assign tabsNavData = "General;Permit Parameters;Special instructions" %}
 {% capture panelData %}
-  {% include blocks/item-main-tab1.html %}
+  {% include blocks/item-main/item-main-tab1.html %}
   ;&&;
-  {% include blocks/item-main-tab2.html %}
+  {% include blocks/item-main/item-main-tab2.html %}
   ;&&;
-  {% include blocks/item-main-tab3.html %}
+  {% include blocks/item-main/item-main-tab3.html %}
 {% endcapture %}
 
 {% include components/tabs.html tabsNavData=tabsNavData panelData=panelData %}
