--- a/sass/tailwind/animations.scss
+++ b/sass/tailwind/animations.scss
@@ -47,27 +47,31 @@
   0% { background-position: 0 0; }
   100% { background-position: 80px 0; }
 }
-.animate-loading::before {
-  content: '';
-  position: absolute;
-  z-index: 10;
-  top: 0; right: 0; bottom: 0; left: 0;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  background-size: 80px 80px;
-  background-image: linear-gradient(
-    135deg,
-    rgba(0,0,0,.1) 0%,
-    rgba(0,0,0,.1) 20%,
-    transparent 40%,
-    rgba(0,0,0,.1) 50%,
-    rgba(0,0,0,.1) 70%,
-    transparent 90%,
-    rgba(0,0,0,.1) 100%
-  );
-  animation: loading 3s linear infinite;
+.animate-loading{
+  pointer-events: none;
+
+  &::before {
+    content: '';
+    position: absolute;
+    z-index: 10;
+    top: 0; right: 0; bottom: 0; left: 0;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    background-size: 80px 80px;
+    background-image: linear-gradient(
+      135deg,
+      rgba(0,0,0,.1) 0%,
+      rgba(0,0,0,.1) 20%,
+      transparent 40%,
+      rgba(0,0,0,.1) 50%,
+      rgba(0,0,0,.1) 70%,
+      transparent 90%,
+      rgba(0,0,0,.1) 100%
+    );
+    animation: loading 3s linear infinite;
+  }
 }
 
 @keyframes pop {
