--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/singleselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/field.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 
 <!-- multiselect main-->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect-popup.js"></script>
