added tabs examples with explanations

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,19 +27,22 @@
 <body style="background-color: #FFF;">
 
   <section class="my-8 px-1/5 text-center">
+    <h3>Tracker versions</h3>
     {% include components/push.html href="present" title="Present" go="true" %}
     {% include components/push.html href="future" title="Future" go="true" %}
   </section>
 
   <section class="my-8 px-1/5 text-center">
-    {% include components/push.html href="selectors" title="Selectors" go="true" %}
+    <h3>Components</h3>
     {% include components/push.html href="buttons" title="Buttons" go="true" %}
-    {% include components/push.html href="tabs" title="Tabs" go="true" %}
     {% include components/push.html href="comments" title="<span class='font-normal'></span>Comments" drop="true" smallCaps='true' %}
     {% include components/push.html href="itembox" title="Itembox" go="true" %}
+    {% include components/push.html href="selectors" title="Selectors" go="true" %}
+    {% include components/push.html href="tabs" title="Tabs" go="true" %}
   </section>
 
   <section class="my-8 px-1/5 text-center">
+    <h3>Extra pages</h3>
     {% include components/push.html href="font" title="Font config" %}
     {% include components/push.html href="tutorial" title="Tutorial" %}
   </section>
