added tab navigation hover effect on focus

--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -92,7 +92,7 @@
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
 
-      &:not(.tabs-nav__link--active):hover {
+      &:not(.tabs-nav__link--active):hover, &:not(.tabs-nav__link--active):focus {
         transform: translateY(-2px);
       }
 
