background color moved to selectors layout from app.scss

--- a/_layouts/selectors.html
+++ b/_layouts/selectors.html
@@ -4,7 +4,7 @@
     {% include head.html %}
   </head>
 
-  <body class="page-{{ page.title }}">
+  <body class="page-{{ page.title }}" style="background-color: #FFF;">
     <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
 
     {{ content }}
