--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -43,7 +43,7 @@
             {% include components/selector.html selectorData=",,,395415"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Permalink cell</div>
         </li>
         <li class="itemBox__cell flex-grow-2">
@@ -68,7 +68,7 @@
             {% include components/selector.html selectorData=",,,395415"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Permalink cell</div>
         </li>
         <li class="itemBox__cell flex-grow-2">
@@ -94,7 +94,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner"></div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Integrated Release Management</div>
         </li>
         <li class="itemBox__cell flex-grow-2">
@@ -151,7 +151,7 @@
               {% include components/selector.html selectorData=",,,32072" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
             </div>
           </li>
-          <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+          <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
             <div class="itemBox__cellInner">Add indicators in import/export</div>
           </li>
           <li class="itemBox__cell flex-grow-2">
@@ -176,7 +176,7 @@
               {% include components/selector.html selectorData=",,,32750"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
             </div>
           </li>
-          <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+          <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
             <div class="itemBox__cellInner">Source files of project in sub-folders of install folder</div>
           </li>
           <li class="itemBox__cell flex-grow-2">
@@ -201,7 +201,7 @@
               {% include components/selector.html selectorData=",,,32454"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
             </div>
           </li>
-          <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+          <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
             <div class="itemBox__cellInner">Publish the "binary" and "selenium" (zip) packages as NuGet packages</div>
           </li>
           <li class="itemBox__cell flex-grow-2">
@@ -237,7 +237,7 @@
             {% include components/selector.html selectorData=",,,31795" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
             </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Opening person detail page is slow (> 30 sec)</div>
         </li>
         <li class="itemBox__cell flex-grow-2">
@@ -263,7 +263,7 @@
             {% include components/selector.html selectorData=",,,161531" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Backup Report [Failed] > backup.admin@tenforce.com > Belgacom-App > Job 2013-06-</div>
         </li>
         <li class="itemBox__cell flex-grow-2">
@@ -289,7 +289,7 @@
             {% include components/selector.html selectorData=",,,283377" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Kallo: statistiek geen tekst FW: stats</div>
         </li>
         <li class="itemBox__cell flex-grow-2">
@@ -374,7 +374,7 @@
             {% include components/selector.html selectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Permalink cell</div>
         </li>
       </ul>
@@ -399,7 +399,7 @@
             readonly cell with any kind of data in it
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner">Permalink cell</div>
         </li>
       </ul>
@@ -455,7 +455,7 @@
                 {% include components/selector.html selectorData=",,,32072" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
               </div>
             </li>
-            <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+            <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
               <div class="itemBox__cellInner">Add indicators in import/export</div>
             </li>
             <li class="itemBox__cell flex-grow-2">
@@ -480,7 +480,7 @@
                 {% include components/selector.html selectorData=",,,32750" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
               </div>
             </li>
-            <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+            <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
               <div class="itemBox__cellInner">Source files of project in sub-folders of install folder</div>
             </li>
             <li class="itemBox__cell flex-grow-2">
@@ -505,7 +505,7 @@
                 {% include components/selector.html selectorData=",,,32454" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
               </div>
             </li>
-            <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+            <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
               <div class="itemBox__cellInner">Publish the "binary" and "selenium" (zip) packages as NuGet packages</div>
             </li>
             <li class="itemBox__cell flex-grow-2">
