--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -18,7 +18,7 @@
     {% for item in site.data.breadcrumb-popup.items %}
     <div class="itemBox__row">
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell">
-        <li class="itemBox__cell itemBox__cell--permalink">
+        <li class="itemBox__cell itemBox__cell--permalink" tabindex="0">
           <div class="itemBox__cellInner JS_text">
             <div class="itemBox__value">{{item}}</div>
           </div>
