--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,6 +36,7 @@
     <h3>Components</h3>
     {% include components/push.html href="buttons" title="Buttons" go="true" %}
     {% include components/push.html href="comments" title="<span class='font-normal'></span>Comments" drop="true" smallCaps='true' %}
+    {% include components/push.html href="inputs" title="Inputs" go="true" %}
     {% include components/push.html href="itembox" title="Itembox" go="true" %}
     {% include components/push.html href="selectors" title="Selectors" go="true" %}
     {% include components/push.html href="tabs" title="Tabs" go="true" %}
