--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -19,7 +19,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out, left .3s ease-in-out;
     color: #808080;
     z-index: 2;
     pointer-events: none;
@@ -119,6 +119,12 @@
     .field__error {
       width: 26px;
       opacity: 1;
+    }
+    .field__label {
+      left: 36px;
+    }
+    .field__value {
+      left: 15px;
     }
   }
 
