--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -24,6 +24,7 @@
     z-index: 2;
     pointer-events: none;
     top: 22px;
+    left: 0;
     font-size: 16px;
     font-weight: 400;
     font-style: italic;
