--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,7 @@
 </head>
 
 <body style="background-color: #FFF;">
+  <div class="overlay-body"></div>
 
   <section class="my-8 px-1/5 text-center">
     <h3>Tracker versions</h3>
