--- a/_layouts/selectors.html
+++ b/_layouts/selectors.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="page-{{ page.title }}" style="background-color: #FFF;">
-    <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
+    <div class="overlay-body"></div>
 
     {{ content }}
 
