--- a/_layouts/itembox.html
+++ b/_layouts/itembox.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="page-{{ page.title }}">
-  <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
+  <div class="overlay-body"></div>
 
   {{ content }}
 
