--- a/sass/tailwind-extend.scss
+++ b/sass/tailwind-extend.scss
@@ -38,6 +38,7 @@ html {
 @import "tailwind/filters.css";
 @import "tailwind/flexbox.css";
 @import "tailwind/layout.css";
+@import "tailwind/overlay.css";
 @import "tailwind/sizing.css";
 @import "tailwind/spacing.css";
 @import "tailwind/transforms.css";
