--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,6 +39,7 @@
     {% include components/push.html href="comments" title="<span class='font-normal'></span>Comments" drop="true" smallCaps='true' %}
     {% include components/push.html href="inputs" title="Inputs" go="true" %}
     {% include components/push.html href="itembox" title="Itembox" go="true" %}
+    {% include components/push.html href="popups" title="Popups and overlay" go="true" %}
     {% include components/push.html href="selectors" title="Selectors" go="true" %}
     {% include components/push.html href="tabs" title="Tabs" go="true" %}
   </section>
