Overlay is a component now

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,6 +1,6 @@
   <div class="app cf item-progress--visible">
 
-      <div class="overlay-body"></div>
+      {% include components/overlay.html %}
 
       <div class="app-navigator">
         {% include blocks/app-nav/app-nav.html %}
