--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="page-{{ page.title }}">
-    <div class="overlay-body"></div>
+    {% include components/overlay.html %}
 
     {{ content }}
 
