--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="overlay-body"></div>
+    {% include components/overlay.html %}
     {{ content }}
 
     <!-- POPUPS -->
