--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="theme-dark">
-    <div class="overlay-body"></div>
+    {% include components/overlay.html %}
     {{ content }}
 
     {% include foot.html %}
