--- a/_layouts/itembox.html
+++ b/_layouts/itembox.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="page-{{ page.title }}">
-  <div class="overlay-body"></div>
+  {% include components/overlay.html %}
 
   {{ content }}
 
