--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -11,12 +11,12 @@
       &__slide {
         &--left {
           .tabs-nav__slideShadow {
-            background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #dadada 100%);
+            background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #bdbdbd 100%);
           }
         }
         &--right {
           .tabs-nav__slideShadow {
-            background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #dadada 100%);
+            background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #bdbdbd 100%);
           }
         }
       }
