--- a/_includes/blocks/popup/ms-sublist-tags-colors-color.html
+++ b/_includes/blocks/popup/ms-sublist-tags-colors-color.html
@@ -4,7 +4,7 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner JS_itemBox__cellInner--color">
-            <button class="itemBox__action">
+            <div class="itemBox__action">
               <div class="selector selector--expanded">
                 <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
@@ -13,7 +13,7 @@
                 </div>
               </div>
               <span>{{item.name}}</span>
-            </button>
+            </div>
           </div>
         </li>
       </ul>
